[metadata]
name = django-iris
version = 0.1.4
url = https://github.com/caretdev/django-iris
maintainer = CaretDev
maintainer_email = dmitry@caretdev.com
license = MIT
description = Django backend for InterSystems IRIS
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 4.0
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Source = https://github.com/caretdev/django-iris
    Tracker = https://github.com/caretdev/django-iris/issues

[options]
python_requires = >=3.8
